[package]
name = "close_all_active_orders"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.10"
futures = "0.3"
querystring = "1.1.0"
ring = "0.16.20"
data-encoding = "2.3.3"
magic-crypt = "3.1.12"